# markItDownFE

./: README.md  main.py  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/convert/csv-to-markdown/: page.tsx
app/convert/doc-to-markdown/: page.tsx
app/convert/excel-to-markdown/: page.tsx
app/convert/html-to-markdown/: page.tsx
app/convert/pdf-to-markdown/: page.tsx
app/convert/ppt-to-markdown/: page.tsx
app/cookies/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: BenefitsGrid.tsx  BlogSection.tsx  ConverterTool.tsx  FAQ.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  ThemeProvider.tsx  UseCasePage.tsx  WhatItDoes.tsx  WhyConvert.tsx
lib/: api.ts  declarations.d.ts  i18n.tsx  types.ts  utils.ts
