[project]
name = "markitdown-api"
version = "0.1.0"
description = "FastAPI backend for MarkItDown Pro - Convert any file to Markdown"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "markitdown[all]>=0.1.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "pypdfium2>=5.10.1",
    "cryptography>=49.0.0",
    "pdfminer-six>=20260107",
    "pillow>=12.2.0",
    "asyncpg>=0.29.0",
]

[tool.uv]
dev-dependencies = []
